HW20-173 - Campaign Media Partner - Too much space

--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -4436,7 +4436,7 @@ ul[data-sa-theme="basic-green"].ui-menu {
 #block-osha-newsletter-osha-newsletter-events-subscribe label {
   color: #FFF;
   font-weight: normal;
-  font-size: 0.9em;
+  font-size: 1.2rem;
 }
 #block-osha-newsletter-osha-newsletter-events-subscribe label {
   padding-left: 0;
