--- a/docroot/sites/all/themes/hwc_frontend/less/content.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/content.less
@@ -7219,7 +7219,7 @@ html:lang(hu) , html:lang(nl), html:lang(mt) {
 	}
 }
 .view-id-partners_list{
-	margin: @margin1;
+	margin: 0 25px 25px 25px;
 	color: @color2;
 	font-size: 1.15em;
 	font-weight: bold;
