--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -5026,7 +5026,7 @@ ul[data-sa-theme="basic-green"].ui-menu{
 	a, label{
 		color: #FFF;
 		font-weight: normal;
-		font-size: 0.9em;
+		font-size: 1.2rem;
 	}
 
 	label{
