--- a/docroot/sites/all/themes/hwc_frontend/css/style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/style.css
@@ -7282,7 +7282,7 @@ header.navbar-default .campaigns-header .navbar-header {
 header.navbar-default .campaigns-header .navbar-header a.pull-left {
   border-right: 1px solid #003399;
   padding-right: 2em;
-  margin-right: 2em;
+  margin-right: 1em;
 }
 header.navbar-default .campaigns-header .navbar-header img:nth-child(1) {
   margin-top: 5px;
@@ -7299,11 +7299,11 @@ header.navbar-default .campaigns-header .navbar-header a img.pull-left {
 header.navbar-default .campaigns-header .navbar-header img:nth-child(3) {
   padding-top: 69px;
   padding-bottom: 32px;
-  padding-right: 15px;
-  border-right: 1px solid #003399;
-  width: 80px;
+  padding-right: 24px;
+  width: 89px;
   height: auto;
-  margin-left: 10px;
+  margin-left: 23px;
+  border-right: 1px solid #003399;
 }
 header.navbar-default .campaigns-header .navbar-header .header-text {
   color: #003399;
@@ -7410,7 +7410,7 @@ header.navbar-default .campaigns-header .navbar-header #block-search-form #edit-
   margin-bottom: 0px;
 }
 header.navbar-default .campaigns-header .row:first-of-type {
-  padding: 5px 20px 0px 15px;
+  padding: 10px 20px 5px 0;
 }
 header.navbar-default .campaigns-header #block-menu-menu-header-login {
   float: right;
