--- a/docroot/sites/all/themes/hwc_frontend/less/header.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/header.less
@@ -99,7 +99,7 @@ header.navbar-default{
 			a.pull-left{
 				border-right: 1px solid @border-header-color;
 				padding-right: 2em;
-				margin-right: 2em;
+				margin-right: 1em;
 			}
 			img:nth-child(1){
 				margin-top: 5px;
@@ -115,12 +115,12 @@ header.navbar-default{
 			}
 			img:nth-child(3){
 				padding-top: 69px;
-			    padding-bottom: 32px;
-			    padding-right: 15px;
-				border-right: 1px solid @border-header-color;
-				width: 80px;
-			    height: auto;
-			    margin-left: 10px;
+				padding-bottom: 32px;
+				padding-right: 24px;
+				width: 89px;
+				height: auto;
+				margin-left: 23px;
+				border-right: 1px solid #003399;
 			}
 			
 			.header-text{
@@ -238,7 +238,7 @@ header.navbar-default{
 			}
 		}
 		.row:first-of-type{
-			padding: 5px 20px 0px 15px;
+			padding: 10px 20px 5px 0;
 		}
 		
 		/* login */
