--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
@@ -41,6 +41,10 @@
 	}
 
 
+	header.navbar-default .campaigns-header .row:first-of-type{
+		padding: 10px 20px 5px 35px;
+	}
+
 }
 
 @media (max-width: 1465px) {
