--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -36,6 +36,10 @@ body{
 	color:#59595A;
 }
 
+#block-hwc-homepage-splash-title-banner-countdown{
+	margin-top: 1em;
+}
+
 select{
 	-webkit-appearance: none;
 	-moz-appearance: none;
