--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -1435,7 +1435,7 @@ input[type="checkbox"]:checked + label .my-checkbox:after {
 
 .breadcrumb{
 	background: transparent;
-	padding: 15px 10px 5px 100px;
+	padding: 15px 10px 5px 67px;
 	list-style: none;
 	li {
 		display: inline;
@@ -5115,6 +5115,11 @@ body.press-room{
 		.hwc-share-widget{
 			padding-bottom: 2em;
 		}
+	}
+
+	.field-name-body{
+		width: 73%;
+    	padding-left: 2.2em;
 	}
 }
 
