--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-480.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-480.less
@@ -76,3 +76,13 @@
 	}
 
 }
+
+@media (max-width: 348px) { 
+	.how-to-apply{ 
+		> div.boxes{ 
+			> div:nth-child(1), > div:nth-child(2), > div:nth-child(3){
+				left: 62px;
+			}
+		}
+	}
+}
