--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -5482,7 +5482,7 @@ body.european-week{
 
 	#european_week_date{
 		color: #FFF;
-		font-size: 3.4rem;
+		font-size: 2.2em;
 	    width: 100%;
 	    text-align:center;
 	    font-weight: bold;
