--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
@@ -29,6 +29,10 @@
 		display: none;
 	}
 
+	body.press-room .box-before.news.two-column, body.european-week .box-before.news.two-column, body.press-room .box-before.events, body.european-week .box-before.events{
+		width: 100%;
+	}
+
 }
 
 
