Fix publications Filters

--- a/docroot/sites/all/themes/hwc_frontend/less/content.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/content.less
@@ -1118,6 +1118,7 @@ ul.tabs--primary.nav.nav-tabs{
 		}
 	}
 
+	.form-item-main-tags,
 	.form-item-relevant-for,
 	.form-item-field-publication-type,
 	.form-item-language,
@@ -1125,7 +1126,6 @@ ul.tabs--primary.nav.nav-tabs{
 	.form-item-languages{
 		margin-top: 0;
 		padding-top: 10px;
-		border-bottom: 1px dotted @color3;
 		margin-bottom: 0px;
 		padding-bottom: 5px;
 		clear: both;
@@ -1135,6 +1135,7 @@ ul.tabs--primary.nav.nav-tabs{
 		}
 	}
 	
+	.form-item-main-tags > label,
 	.form-item-field-publication-type > label,
 	.form-item-language > label,
 	.form-item-field-priority-area > label,
@@ -1154,6 +1155,7 @@ ul.tabs--primary.nav.nav-tabs{
 			float: right;
 		}
 	}
+	.form-item-main-tags > label.active,
 	.form-item-field-publication-type > label.active,
 	.form-item-language > label.active,
 	.form-item-field-priority-area > label.active,
