--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -181,7 +181,7 @@ body .more-link:before {
   padding-top: 2em;
   border-bottom: 0;
   font-size: 2.2em;
-  font-style: italic;
+  font-style: normal;
   font-weight: 400;
   color: #FFF;
 }
@@ -1035,6 +1035,10 @@ input[type="checkbox"]:checked + label .my-checkbox:after {
 }
 .my-checkbox {
   float: left;
+  border: 1px solid #003399;
+  width: 19px;
+  height: 19px;
+  border-radius: 5px;
 }
 .row-newsletter-social {
   background: url(../images/background-newsletter-300-v2.png);
@@ -1621,8 +1625,6 @@ aside.col-md-3 .region.region-sidebar-first.well {
 /* Publications List */
 #edit-main-tags > div > label {
   font-size: 1.3em;
-  padding-top: 10px;
-  padding-bottom: 10px;
 }
 .node-article .content {
   margin-top: 1em;
@@ -2084,7 +2086,8 @@ div.publications-detail-right-column > a.download {
   color: #55575d !important;
   font-size: 0.9em !important;
 }
-#edit-field-publication-type > div > label {
+#edit-field-publication-type > div > label,
+#edit-main-tags > div > label {
   font-size: 1.8rem;
   color: #003399 !important;
 }
