--- a/docroot/sites/all/themes/hwc_frontend/css/rewrite.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/rewrite.css
@@ -204,13 +204,21 @@ article .hwc-share-widget ul{
     padding-bottom: 0;
 }
 
-.form-item-relevant-for, .form-item-field-publication-type, .form-item-language, .form-item-field-priority-area, .form-item-languages{
+.form-item-relevant-for, .form-item-main-tags, .form-item-field-publication-type, .form-item-language, .form-item-field-priority-area, .form-item-languages{
     padding-top: 5px;
     border-bottom: 0;
 }
 
 #edit-left-column{
     padding-left: 0;
+}
+
+#edit-left-column label{
+    color: #59595A!important;
+}
+
+#edit-left-column input[type=checkbox]{
+    display: block;
 }
 
 .checkbox input[type=checkbox]:checked:before{
@@ -245,13 +253,13 @@ a.chosen-single{
 }
 
 
-.form-item-field-publication-type > label.active:after, .form-item-language > label.active:after, .form-item-field-priority-area > label.active:after, .form-item-relevant-for > label.active:after, .form-item-languages > label.active:after, .form-item-publication-type > label.active:after{
+.form-item-main-tags > label.active:after, .form-item-field-publication-type > label.active:after, .form-item-language > label.active:after, .form-item-field-priority-area > label.active:after, .form-item-relevant-for > label.active:after, .form-item-languages > label.active:after, .form-item-publication-type > label.active:after{
     color: #c1e000;
     padding-top: 2px;
 }
 
 
-.form-item-field-publication-type > label:after, .form-item-language > label:after, .form-item-field-priority-area > label:after, .form-item-relevant-for > label:after, .form-item-languages > label:after, .form-item-publication-type > label:after{
+.form-item-main-tags > label:after, .form-item-field-publication-type > label:after, .form-item-language > label:after, .form-item-field-priority-area > label:after, .form-item-relevant-for > label:after, .form-item-languages > label:after, .form-item-publication-type > label:after{
     color: #c1e000;
     padding-top: 2px;
 }
