--- a/docroot/sites/all/themes/hwc_frontend/css/style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/style.css
@@ -8954,6 +8954,7 @@ div[class*='view-'] .field-name-field-summary {
 .field-name-field-country-code:after {
   content: "";
 }
+.form-item-main-tags,
 .form-item-relevant-for,
 .form-item-field-publication-type,
 .form-item-language,
@@ -8961,12 +8962,12 @@ div[class*='view-'] .field-name-field-summary {
 .form-item-languages {
   margin-top: 0;
   padding-top: 10px;
-  border-bottom: 1px dotted #749b00;
   margin-bottom: 0px;
   padding-bottom: 5px;
   clear: both;
   overflow: hidden;
 }
+.form-item-main-tags .checkbox:last-child,
 .form-item-relevant-for .checkbox:last-child,
 .form-item-field-publication-type .checkbox:last-child,
 .form-item-language .checkbox:last-child,
@@ -8974,6 +8975,7 @@ div[class*='view-'] .field-name-field-summary {
 .form-item-languages .checkbox:last-child {
   margin-bottom: 10px;
 }
+.form-item-main-tags > label,
 .form-item-field-publication-type > label,
 .form-item-language > label,
 .form-item-field-priority-area > label,
@@ -8987,6 +8989,7 @@ div[class*='view-'] .field-name-field-summary {
   clear: both;
   cursor: pointer;
 }
+.form-item-main-tags > label:after,
 .form-item-field-publication-type > label:after,
 .form-item-language > label:after,
 .form-item-field-priority-area > label:after,
@@ -8998,6 +9001,7 @@ div[class*='view-'] .field-name-field-summary {
   margin-left: 10px;
   float: right;
 }
+.form-item-main-tags > label.active:after,
 .form-item-field-publication-type > label.active:after,
 .form-item-language > label.active:after,
 .form-item-field-priority-area > label.active:after,
