--- a/docroot/sites/all/themes/hwc_frontend/less/content.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/content.less
@@ -207,37 +207,6 @@ ul.tabs--primary.nav.nav-tabs{
 		text-align: center;
 		font-size: 1.2em;
 	}
-	.facetapi-facetapi-checkbox-links {
-		margin-top: 10px;
-		li{
-			color: @color2;
-			margin-bottom: 10px;
-			input[type="checkbox"]{
-				margin-right: 0.5em;
-				margin-right: 15px;
-				&:before {
-					border: 2px solid #003399;
-					content: "\2716";
-					padding: 0px 1px 0px 3px;
-					margin-right: 10px;
-					color: #ffffff;
-					width: 20px;
-					height: 20px;
-					background-color: white;
-				}
-				&:checked:before {
-					content: "\2713";
-					color: #003399;
-				}
-			}
-			#facetapi-link--all--checkbox {
-				margin-right: 15px;
-			}
-			a{
-				font-family: @font-family-base;
-			}
-		}
-	}
 	
 	.radio{
 		margin-bottom: 0.5em;
@@ -1862,37 +1831,6 @@ ul.tabs--primary.nav.nav-tabs{
 					    font-family: "Glyphicons Halflings";
 					    margin-left: 10px;
 					    float: right;
-					}
-				}
-				.facetapi-facetapi-checkbox-links {
-					margin-top: 10px;
-					li{
-						color: @color2;
-						margin-bottom: 10px;
-						input[type="checkbox"]{
-							margin-right: 0.5em;
-							margin-right: 15px;
-							&:before {
-								border: 2px solid #003399;
-								content: "\2716";
-								padding: 0px 1px 0px 3px;
-								margin-right: 10px;
-								color: #ffffff;
-								width: 20px;
-								height: 20px;
-								background-color: white;
-							}
-							&:checked:before {
-								content: "\2713";
-								color: #003399;
-							}
-						}
-						#facetapi-link--all--checkbox {
-							margin-right: 11px;
-						}
-						a{
-							font-family: @font-family-base;
-						}
 					}
 				}
 			}
@@ -3879,7 +3817,7 @@ p.no-results{
 
 #block-system-main .view-events-search, .view-events-search{
 	clear: both;
-	margin: 0 @margin1;
+	margin: 0 10px;
 	.form-type-textfield{
 	    margin-top: 0.15em;
 	    margin-bottom: 0.15em;
@@ -5856,37 +5794,6 @@ html:lang(hu) , html:lang(nl), html:lang(mt) {
 				    font-family: "Glyphicons Halflings";
 				    margin-left: 10px;
 				    float: right;
-				}
-			}
-			.facetapi-facetapi-checkbox-links {
-				margin-top: 10px;
-				li{
-					color: @color2;
-					margin-bottom: 10px;
-					input[type="checkbox"]{
-						margin-right: 0.5em;
-						margin-right: 15px;
-						&:before {
-							border: 2px solid #003399;
-							content: "\2716";
-							padding: 0px 1px 0px 3px;
-							margin-right: 10px;
-							color: #ffffff;
-							width: 20px;
-							height: 20px;
-							background-color: white;
-						}
-						&:checked:before {
-							content: "\2713";
-							color: #003399;
-						}
-					}
-					#facetapi-link--all--checkbox {
-						margin-right: 11px;
-					}
-					a{
-						font-family: @font-family-base;
-					}
 				}
 			}
 		}
