--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -1809,8 +1809,12 @@ aside.col-md-3{
 
 /* Publications List */
 
-#edit-main-tags > div > label{
-	font-size: 1.3em;
+#edit-main-tags{
+	margin-top: 0;
+	margin-bottom: 0;
+	> div > label{
+		font-size: 1.3em;
+	}
 }
 
 .node-article .content{
@@ -1833,7 +1837,7 @@ aside.col-md-3{
     border: 1px solid #003399;
     border-radius: 5px;
     margin-top: 26px;
-    width: 93%;
+    width: 100%;
     background: #FFF;
 }
 
@@ -1862,7 +1866,7 @@ aside.col-md-3{
 	.views-exposed-widget, .page-events .views-exposed-widget{
 	    float: left;
 	    padding-top: 0!important;
-	    width: 32.3%!important;
+	    width: 32.2%!important;
 	    margin-right: 1em;
 	}
 
@@ -2254,10 +2258,10 @@ div.publications-detail-right-column > a.download{
 }
 
 .page-publications #content, .page-events #content {
-    width: 80.1%!important;
+    width: 79.1%!important;
     border-top: 0px solid #003399;
     margin-top: 2em;
-    margin-left: 10px!important;
+    margin-left: 20px!important;
 }
 
 .content-fluid {
@@ -2341,6 +2345,9 @@ div.publications-detail-right-column > a.download{
 	> div > label{
 		font-size: 1.8rem;
   		color: #003399 !important;
+	}
+	.form-checkboxes{
+		padding-top: 10px;
 	}
 }
 
