HW20-138 - News list

--- a/docroot/sites/all/themes/hwc_frontend/css/rewrite.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/rewrite.css
@@ -346,3 +346,7 @@ body > div.main-container > div > aside > div > div:nth-child(2){
 .page-node .node-news .field-name-body{
     padding-bottom: 2em;
 }
+
+.page-media-centre-news .main-container #block-system-main .view .views-row .field-name-field-summary{
+    font-weight: bold;
+}
