HW20-132 - Splash page

--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
@@ -754,6 +754,11 @@
 		#block-hwc-european-week-news-events{
 			margin-left: -15px;
 		}
+
+		.field-name-body{
+			width: 100%;
+    		padding-left: 5px;
+		}
 	}
 
 }
