--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -98,8 +98,8 @@ body .more-link{
 .btn-background-transparent{
 	background: transparent;
 	width: 208px;
-    color: #e5f1ac;
-    border: 3px solid #bcd75b;
+    color: #FFF;
+    border: 3px solid #FFF;
     padding: 0.6em 2.5em 0.6em 1.5em;
     border-radius: 7px;
     font-weight: 600;
@@ -209,9 +209,9 @@ body .more-link{
 		text-align: center;
 		padding-bottom: 0;
 		h1{
-			padding-top: 2em;
+			padding-top: 1.5em;
 		    border-bottom: 0;
-		    font-size: 2.2em;
+		    font-size: 2.5em;
 		    font-style: normal;
 		    font-weight: 400;
 		    color:#FFF;
