--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -79,8 +79,8 @@ body .more-link:before {
 .btn-background-transparent {
   background: transparent;
   width: 208px;
-  color: #e5f1ac;
-  border: 3px solid #bcd75b;
+  color: #FFF;
+  border: 3px solid #FFF;
   padding: 0.6em 2.5em 0.6em 1.5em;
   border-radius: 7px;
   font-weight: 600;
@@ -178,9 +178,9 @@ body .more-link:before {
   padding-bottom: 0;
 }
 .intro-splash-20 .views-row-first h1 {
-  padding-top: 2em;
+  padding-top: 1.5em;
   border-bottom: 0;
-  font-size: 2.2em;
+  font-size: 2.5em;
   font-style: normal;
   font-weight: 400;
   color: #FFF;
@@ -6262,6 +6262,11 @@ body.european-week #block-views-news-european-week ul > li:nth-child(2) {
   body.press-room #block-hwc-european-week-news-events,
   body.european-week #block-hwc-european-week-news-events {
     margin-left: -15px;
+  }
+  body.press-room .field-name-body,
+  body.european-week .field-name-body {
+    width: 100%;
+    padding-left: 5px;
   }
 }
 @media (max-width: 600px) {
