--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
@@ -176,7 +176,8 @@
 
 	.page-publications #content{
 		margin-top: 1em;
-		width: 93.3% !important;
+		width: 95.1% !important;
+		margin-left: 9px !important;
 	}
 
 	.search-new-design{
