--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
@@ -381,6 +381,10 @@
 		}
 	}
 
+	.page-tools-and-publications #edit-left-column .content-filters{
+		margin-top: 1em;
+	}
+
 	/* Articles */
 	.node-type-article article{
 	    padding-bottom: 1em;
