--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -1029,8 +1029,8 @@ input[type="checkbox"] + label .my-checkbox {
 input[type="checkbox"]:checked + label .my-checkbox:after {
   content: "\2713";
   color: #003399;
-  padding-left: 5px;
-  padding-top: 2px;
+  padding-left: 4px;
+  padding-top: 0;
   display: block;
 }
 .my-checkbox {
@@ -1645,7 +1645,7 @@ aside.col-md-3 .region.region-sidebar-first.well {
 .sidebars_first .content-filters {
   float: left;
   padding: 0em 1em 0 1em;
-  border: 1px solid #003399;
+  border: 1px solid #B0B2B3;
   border-radius: 5px;
   margin-top: 26px;
   width: 100%;
@@ -2135,7 +2135,7 @@ label.option {
 .search-new-design,
 #edit-search-api-views-fulltext {
   height: 34px;
-  border: 1px solid #003399;
+  border: 1px solid #B0B2B3;
   border-radius: 5px !important;
   background: url(../images/green-search.png) no-repeat 96% 55% #ffffff;
   width: 100% !important;
@@ -2154,7 +2154,6 @@ html[lang=pt] #edit-search-api-views-fulltext {
 #edit_field_country_code_chosen,
 #edit-years {
   height: 100%;
-  border: 1px solid #003399 !important;
   border-radius: 5px !important;
   background: url(../images/green-select.png) no-repeat scroll 94% center #ffffff !important;
   padding-left: 10px;
@@ -2165,7 +2164,6 @@ html[lang=pt] #edit-search-api-views-fulltext {
 .views-widget-filter-field_start_date_value input,
 .views-widget-filter-field_start_date_value2 input {
   height: 100%;
-  border: 1px solid #003399 !important;
   border-radius: 5px !important;
   background: url(../images/green-calendar.png) no-repeat scroll 94% center #ffffff !important;
   padding-left: 10px;
@@ -3980,15 +3978,18 @@ body.een .panels-flexible-column-first .pane-node-field-pledge .pane-title {
   border-left: 1px solid #B0B1B2;
 }
 /* Events */
+.logged-in .page-events #osha-events-dates-form {
+  margin-top: 18px;
+}
 .page-events .region-sidebar-first .contextual-links-region {
   margin-top: 0;
 }
 .page-events #osha-events-dates-form {
-  border: 2px solid #B0B1B2;
+  border: 1px solid #B0B1B2;
   border-radius: 7px;
   padding: 1em 0 1em 1em;
   float: right;
-  margin-top: 33px;
+  margin-top: 34px;
   width: 288px;
   margin-bottom: 3em;
 }
@@ -4001,7 +4002,6 @@ body.een .panels-flexible-column-first .pane-node-field-pledge .pane-title {
 }
 .page-events #osha-events-dates-form input {
   height: 100%;
-  border: 1px solid #003399 !important;
   border-radius: 5px !important;
   background: url(../images/green-calendar.png) no-repeat scroll 94% center #ffffff !important;
   padding-left: 10px;
