--- a/docroot/sites/all/themes/hwc_frontend/css/style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/style.css
@@ -6615,7 +6615,6 @@ body a:focus {
 }
 body .form-control {
   border-radius: 0;
-  border-color: #003399;
   color: #575757;
   width: auto;
   box-shadow: inset 0 0px 0px rgba(0, 0, 0, 0);
@@ -7836,7 +7835,7 @@ body textarea,
 body textarea.form-control,
 body select {
   color: #003399;
-  border-color: #003399;
+  border-color: #B0B2B3;
   border-radius: 0;
 }
 body iframe {
