--- a/docroot/sites/all/themes/hwc_frontend/less/content.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/content.less
@@ -29,7 +29,7 @@
 		}
 		input[type="text"], textarea, textarea.form-control, select{
 			color: @text-color-2;
-			border-color: @text-color-2;
+			border-color: #B0B2B3;
 			border-radius: 0;
 		}
 		iframe{
