HW20-79 - Splash Page - News & Events are in italic format

--- a/docroot/sites/all/themes/hwc_frontend/css/rewrite.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/rewrite.css
@@ -302,7 +302,7 @@ body > div.main-container > div > aside > div > div:nth-child(2){
 .page-search .region-sidebar-first .block.block-facetapi{
     clear: both;
     width: 100%;
-    border: 1px solid #003399;
+    border: 1px solid #B0B2B3;
     background: #FFF;
     float: left;
     padding: 0.8em;
