--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -472,6 +472,9 @@ ul.time-and-counters{
 			    		padding-right: 1px;
 			    	}
 			    }
+				.country{
+					font-style: italic;
+				}
 			}
 
 			.content-event{
@@ -797,7 +800,7 @@ header.navbar-default .navbar-collapse nav ul.menu li {
 			padding-top: 2em;
 			border-bottom: 0;
 			font-size: 1.7em;
-			font-style: normal;
+			font-style: italic;
 			font-weight: 400;
 			color:#dee999;
     	}
@@ -955,7 +958,7 @@ header.navbar-default .navbar-collapse nav ul.menu li {
 		}
 		.title-news{
 			font-size: 1.2em;
-			font-style: normal;
+			font-style: italic;
 			color: #003399;
 		}
 		.summary-news{
@@ -1693,7 +1696,7 @@ aside.col-md-3{
   span:nth-child(1){
     color: #003399;
     font-size: 18px;
-    font-style: normal;
+    font-style: italic;
   }
   span:nth-child(2){
     font-size: 12px;
@@ -1714,7 +1717,7 @@ aside.col-md-3{
   span:nth-child(1){
     color: #003399;
     font-size: 18px;
-    font-style: normal;
+    font-style: italic;
   }
   span:nth-child(2){
     font-size: 12px;
@@ -1786,7 +1789,7 @@ aside.col-md-3{
       font-weight: bold;
       line-height: 18px;
       text-decoration: none;
-      font-style: normal;
+      font-style: italic;
     }
     h2 a:hover{
       text-decoration: underline;
@@ -2611,7 +2614,7 @@ span.pages{
 	}
 	h2{
 		color: #003399;
-		font-style: normal;
+		font-style: italic;
 		font-weight: 400;
 		padding-top: 1em;
 	}
@@ -2797,7 +2800,7 @@ span.pages{
 						margin-top: 0;
     					line-height: 23px;
 						a{
-							font-style: normal;
+							font-style: italic;
 						    font-size: 2.1rem;
 						    font-weight: normal;
 						    padding-top: 0;
@@ -2818,7 +2821,7 @@ span.pages{
 								content:'';
 							}
 							a{
-								font-style: normal;
+								font-style: italic;
 							    font-size: 2.1rem;
 							    font-weight: normal;
 							    padding-top: 0.6em;
@@ -3299,7 +3302,7 @@ div.workbench-info-block{
 
 	.hwc-alphabet-container{
 		a{
-			font-style: normal;
+			font-style: italic;
 		}
 	}
 
@@ -3378,7 +3381,7 @@ div.workbench-info-block{
 
 	.pane-content{
 	 	padding: 10px 20px 20px 20px;
-	    font-style: normal;
+	    font-style: italic;
 	    color: #FFF;
 	}
 }
@@ -3694,7 +3697,7 @@ body.ocp .box-type-partner{
 		padding: 1em;
 		padding-left: 1em;
 		padding-right: 1em;
-		font-style: normal;
+		font-style: italic;
 		color: #FFF;
 	}
 
