--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -1121,13 +1121,6 @@ header.navbar-default .navbar-collapse nav ul.menu li {
 	}
 }
 
-.checkbox label:before, .checkbox input[type=checkbox]:checked:before, .checkbox input[type="checkbox"]:checked{
-	display: none;
-}
-
-input[type="checkbox"] {
-  display:none;
-}
  
 input[type="checkbox"] + label .my-checkbox{
     display: inline-block;
@@ -2351,9 +2344,6 @@ div.publications-detail-right-column > a.download{
 	}
 }
 
-input[type=checkbox] {
-    display: none;
-}
 
 input[type=checkbox] + label {
     display: block;
@@ -5027,6 +5017,10 @@ ul[data-sa-theme="basic-green"].ui-menu{
 		    border-top-right-radius: 5px;
 		    border-bottom-right-radius: 5px;
     	}
+
+    	input[type=checkbox] {
+    		display: none;
+    	}
     }
 
 	h2{
@@ -5542,5 +5536,12 @@ body.european-week{
 			border-bottom: 0;
 			padding-bottom: 0;
 		}
+	}
+}
+
+
+.page-node-linguatools{
+	#block-system-main{
+		padding: 3em;
 	}
 }
