--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-480.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-480.less
@@ -65,8 +65,10 @@
 	    width: 47%;
 	}
 
-	body.press-room h2.block-title{
-		font-size: 2.15em!important;
+	body.press-room{
+		h2.block-title{
+			font-size: 2.15em!important;
+		}
 	}
 
 	.related-resources{
