--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
@@ -481,6 +481,11 @@
 			margin-left: 0 !important;
 			margin-right: 0 !important;
 		}
+
+		.related-resources-boxes div{
+			width: 25%;
+			margin-right: 0em;
+		}
 	}	
 
 	/*Footer*/
