--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -902,6 +902,7 @@ header.navbar-default .navbar-collapse nav ul.menu li {
 	   	float: right;
 	   	width: 100%;
 		padding-left: 1em;
+		padding-right: 10px;
 		word-break: break-word;
 	}
 }
