--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
@@ -765,6 +765,17 @@
 		}
 	}
 
+	body.press-room{
+		.related-resources{ 
+			.related-resources-boxes{ 
+				div{
+					width: 100%;
+				}
+			}
+		}
+	}
+	
+
 }
 
 
