--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
@@ -825,3 +825,17 @@
 	}
 
 }
+
+
+@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : landscape) { 
+	#block-hwc-campaign-resources .campaign-resources .campaign-resources-boxes div {
+	    display: flex;
+	    width: 67%;
+	    margin-bottom: 1em;
+	}
+
+	#block-hwc-campaign-resources .campaign-resources .campaign-resources-boxes a span {
+    	width: 168px;
+	}
+
+}
