--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -5545,3 +5545,16 @@ body.european-week{
 		padding: 3em;
 	}
 }
+
+
+/* HW20-211 HWC20 Development of the complete HWC20 Social Media Social media centre*/
+.page-social-media-centre { 
+	.view-id-social_dashboard {
+		.view-footer {
+			.more-link{
+				background: none !important;
+				max-width: 245px !important;
+			}
+		}
+	}
+}
