--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -4357,6 +4357,8 @@ body{
 		    text-align: left;
 		    padding-left: 10px;
 		    color: #0030a0;
+		    /*HW20-175 Become a Campaign Partner - The title of the text in boxes should be bold*/
+			font-weight: bold;
 		}
 
 		p{
